fix: fix pause button misalignment in GameScene

--- a/src/main/resources/style/game_scene_style.css
+++ b/src/main/resources/style/game_scene_style.css
@@ -1,7 +1,13 @@
 .root {
     -fx-background-color: rgb(3, 177, 252);
-    -fx-spacing: 10px;
+}
+
+.justifier {
     -fx-alignment: CENTER;
+}
+
+.main_pane {
+    -fx-alignment: TOP-CENTER;
 }
 
 .scene_elements {
